# JiPP2

./: CMakeLists.txt
Lab1-4/: CMakeLists.txt
Lab1-4/PoleFigury/: CMakeLists.txt
Lab1-4/Punkt/: CMakeLists.txt
Lab1-4/class1/: main.cpp
Lab1-4/class3/: CMakeLists.txt  main.cpp
Lab1-4/errors1/: CMakeLists.txt  main.cpp
Lab1-4/errors2/: CMakeLists.txt  main.cpp
Lab1-4/firstLib/: CMakeLists.txt
Lab1-4/firstLibCall/: CMakeLists.txt  main.cpp
Lab1-4/indicators2/: CMakeLists.txt
Lab1-4/indicators3/: CMakeLists.txt
Lab1-4/indicators4/: CMakeLists.txt  main.cpp
Lab1-4/randomNumbers/: CMakeLists.txt
Lab1-4/simpleCalc/: CMakeLists.txt
Lab1-4/structures_1&2/: CMakeLists.txt
Lab1-4/structures_3&4/: CMakeLists.txt
Lab10.1/: CMakeLists.txt
Lab10.1/CSV_Lib/: CMakeLists.txt
Lab10.1/csv_test/: CMakeLists.txt  main.cpp  myFile0.csv
Lab5/: CMakeLists.txt
Lab5/konstruktory_1/: CMakeLists.txt  main.cpp
Lab5/test/: CMakeLists.txt
Lab6/: CMakeLists.txt
Lab6/node/: CMakeLists.txt
Lab7/: CMakeLists.txt
Lab8/: CMakeLists.txt
Lab8/Notes/: CMakeLists.txt
Lab9/: CMakeLists.txt
PoleFigury/: main.cpp
allocation_basics/: CMakeLists.txt  main.cpp
class1/: CMakeLists.txt  main.cpp
class2/: CMakeLists.txt  main.cpp
class4/: CMakeLists.txt  main.cpp
errors1/: main.cpp
firstLibCall/: main.cpp
indicators1/: CMakeLists.txt  main.cpp
indicators2/: main.cpp
indicators3/: main.cpp
konst1/: CMakeLists.txt
matrixApp/: CMakeLists.txt  main.cpp
matrixLib/: CMakeLists.txt
maxTab/: CMakeLists.txt  main.cpp
randomNumbers/: main.cpp
reverseTab/: CMakeLists.txt  main.cpp
simpleCalc/: CMakeLists.txt  main.cpp
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
structures_1&2/: main.cpp
structures_3&4/: main.cpp
(+33 files in other folders)
