cmake_minimum_required(VERSION 3.20)
project(JiPP)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(PoleFigury)
add_subdirectory(randomNumbers)
add_subdirectory(maxTab)
add_subdirectory(reverseTab)
add_subdirectory(indicators1)
add_subdirectory(indicators2)
add_subdirectory(indicators3)
add_subdirectory(indicators4)
add_subdirectory(errors1)
add_subdirectory(errors2)
add_subdirectory(structures_1&2)
add_subdirectory(structures_3&4)
add_subdirectory(class1)
add_subdirectory(class2)
add_subdirectory(class3)
add_subdirectory(class4)
add_subdirectory(matrixApp)
add_subdirectory(matrixLib)
add_subdirectory(Lab5)
add_subdirectory(konst1)
add_subdirectory(Lab6)
add_subdirectory(Lab7)

